change images src

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <div id="center">
-        <img src="./assets/images/faf_logo2.png" id="faf_logo">
+        <img src="assets/images/faf_logo2.png" id="faf_logo">
         <div id="message">We are working on our new website. Check our facebook page.</div>
         <a href="https://www.facebook.com/FAF.UTM/">
-            <img src="./assets/images/F_icon.svg" id="f_icon"> <div id="facebook-link">/FAF.UTM</div>
+            <img src="assets/images/F_icon.svg" id="f_icon"> <div id="facebook-link">/FAF.UTM</div>
         </a>
     </div>
 </body>
